ajout du ParseConfigFile.java et des tests